# MetacouplingLLM

./: .gitignore  CHANGELOG.md  INTRODUCTION.md  LICENSE  MANUAL.md  README.md  RELEASE_CHECKLIST.md  paper_citation_counts.csv  pyproject.toml
scripts/: apply_check_keywords.py  audit_unreplaced.py  build_embeddings.py  build_paper_metadata_table.py  build_rag.py  check_no_stale_metacoupling.py  check_oa_status.py  copyright_audit.py  extract_keywords.py  integrate_keywords.py  match_references.py  organize_pdfs.py  organize_pdfs_v2.py  organize_pdfs_v3.py  patch_doi_inventory.py  rebuild_rag_corpus.py  strategy_b_decision.py  verify_papers_vs_bib.py
src/metacouplingllm/: __init__.py  core.py
src/metacouplingllm/data/: PeriTelecoupling_clean.csv  PeriTelecoupling_subset.csv  chunk_embeddings.manifest.json  pericoupled_adm1_edge_list.csv  telecoupling_literature.bib
src/metacouplingllm/knowledge/: __init__.py  adm1_pericoupling.py  citations.py  countries.py  examples.py  framework.py  literature.py  pericoupling.py  rag.py  references.py  websearch.py
src/metacouplingllm/llm/: __init__.py  client.py  parser.py
src/metacouplingllm/output/: __init__.py  formatter.py
src/metacouplingllm/prompts/: __init__.py  builder.py  templates.py
src/metacouplingllm/visualization/: __init__.py  adm1_map.py  worldmap.py
tests/: conftest.py  test_adm1_map.py  test_adm1_pericoupling.py  test_builder.py  test_citations.py  test_client.py  test_core.py  test_countries.py  test_coupling_first.py  test_examples.py  test_formatter.py  test_framework.py  test_gemini_grok_support.py  test_integration.py  test_literature.py  test_openai_integration.py  test_parser.py  test_pericoupling.py  test_rag.py  test_rag_only_mode.py  test_rag_pipeline.py  test_structured_extraction.py  test_templates.py  test_websearch.py  test_worldmap.py
