[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MetacouplingLLM"
version = "0.1.0"
description = "LLM-powered toolkit for applying telecoupling and metacoupling frameworks to research"
readme = "INTRODUCTION.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Xiang Yu", email = "yuxiang4@msu.edu" },
    { name = "Yingjie Li" },
    { name = "Zihan Zheng" },
    { name = "Nan Jia" },
    { name = "Xin Lan" },
    { name = "Jianguo Liu" },
]
maintainers = [
    { name = "Xiang Yu", email = "yuxiang4@msu.edu" },
]
keywords = [
    "metacoupling",
    "telecoupling",
    "sustainability",
    "coupled-human-natural-systems",
    "llm",
    "research",
    "sustainability-science",
    "spatial-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.21",
    "fastembed>=0.8",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]
gemini = ["google-genai>=1.0"]
grok = ["openai>=1.0"]   # Grok uses the OpenAI SDK with xAI base URL
viz = ["geopandas>=0.14", "matplotlib>=3.7"]
search = ["ddgs>=6.0"]
all = ["openai>=1.0", "anthropic>=0.18", "google-genai>=1.0", "geopandas>=0.14", "matplotlib>=3.7", "ddgs>=6.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
Homepage = "https://github.com/Hanshan-XY/MetacouplingLLM"
Documentation = "https://github.com/Hanshan-XY/MetacouplingLLM/blob/main/INTRODUCTION.md"
Manual = "https://github.com/Hanshan-XY/MetacouplingLLM/blob/main/MANUAL.md"
Issues = "https://github.com/Hanshan-XY/MetacouplingLLM/issues"
Repository = "https://github.com/Hanshan-XY/MetacouplingLLM"

[tool.hatch.build]
exclude = [
    "/.pytest_cache",
    "/.tmp_pytest",
    "/.pytest_run_*",
    "/.env",
    "/.env.*",
    "/src/**/__pycache__",
    "/tests/**/__pycache__",
    "/scripts/**/__pycache__",
    "/src/metacouplingllm/data/*.bak",
    "/src/metacouplingllm/data/*.preCSVupdate",
    "/Papers",
    "/Papers_rebuilt",
    "/tmp",
    "/dist",
    "/build",
    "/CLAUDE.md",
    "/RELEASE_CHECKLIST.md",
    "/paper_citation_counts.csv",
]

[tool.hatch.build.targets.wheel]
packages = ["src/metacouplingllm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
